# CloudWars

./: LICENSE  README.md  go.mod  go.sum  main.go
ai/baron/: __ini__.py  baron.py  inspiration.py  license_duration.txt  myAi.py
ai/simai/: action.go  evaluation.go  main.go  simulator.go
core/: cloud.go  cloud_test.go  position.go  position_test.go  velocity.go  velocity_test.go  world.go  world_test.go
examples/: myAi.go  myAi.java  myAi.py  myAi.txt
examples/cpp/: CMakeLists.txt
examples/cpp/src/: myAi.cpp
gui/: game.go  images.go  modeclient.go  modeserver.go
remote/: client.go  client_test.go  server.go
simai/: simai.go
